syntax = "proto3";
package norikv.v1;

message Version { uint64 term = 1; uint64 index = 2; }
message PutRequest {
  bytes key = 1; bytes value = 2; uint64 ttl_ms = 3;
  string idempotency_key = 4; Version if_match = 5;
}
message PutResponse { Version version = 1; map<string,string> meta = 2; }
message GetRequest { bytes key = 1; string consistency = 2; }
message GetResponse { bytes value = 1; Version version = 2; map<string,string> meta = 3; }
message DeleteRequest { bytes key = 1; string idempotency_key = 2; Version if_match = 3; }
message DeleteResponse { bool tombstoned = 1; Version version = 2; }
message ClusterNode { string id = 1; string addr = 2; string role = 3; }
message ShardReplica { string node_id = 1; bool leader = 2; }
message ShardInfo { uint32 id = 1; repeated ShardReplica replicas = 2; }
message ClusterView { uint64 epoch = 1; repeated ClusterNode nodes = 2; repeated ShardInfo shards = 3; }

// Raft peer-to-peer RPC messages
message LogEntry { uint64 term = 1; uint64 index = 2; bytes command = 3; }

message RequestVoteRequest {
  uint64 term = 1;
  string candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}
message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  string leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}
message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
  uint64 conflict_index = 3;  // 0 means no conflict hint
  uint64 last_log_index = 4;
}

message InstallSnapshotRequest {
  uint64 term = 1;
  string leader_id = 2;
  uint64 last_included_index = 3;
  uint64 last_included_term = 4;
  uint64 offset = 5;
  bytes data = 6;
  bool done = 7;
}
message InstallSnapshotResponse {
  uint64 term = 1;
  uint64 bytes_stored = 2;
}

message ReadIndexRequest {
  uint64 term = 1;
  uint64 read_id = 2;
  uint64 commit_index = 3;
}
message ReadIndexResponse {
  uint64 term = 1;
  bool ack = 2;
  uint64 read_id = 3;
}

service Kv { rpc Put(PutRequest) returns (PutResponse); rpc Get(GetRequest) returns (GetResponse); rpc Delete(DeleteRequest) returns (DeleteResponse); }
service Meta { rpc WatchCluster(ClusterView) returns (stream ClusterView); }
service Admin { rpc TransferShard(ShardInfo) returns (ShardInfo); rpc SnapshotShard(ShardInfo) returns (ShardInfo); }
service Raft {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
  rpc ReadIndex(ReadIndexRequest) returns (ReadIndexResponse);
}
